# ultralytics

./: CMakeLists.txt  README.md  package.xml
ultralytics/yolo/data/: augment.py  utils.py
ultralytics/yolo/engine/: model.py  predictor.py  trainer.py
ultralytics/yolo/utils/: instance.py  ops.py  visualization.py
ultralytics/yolo/v8/detect/: train.py
