<?xml version="1.0"?>
<package format="2">
  <name>ultralytics</name>
  <version>8.0.49</version>
  <description>The ultralytics package</description>

  <maintainer email="cds-jetson-host@todo.todo">cds-jetson-host</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
